# banking

./: .gitignore  CMakeLists.txt  main.cpp
include/: ATM.h  DataBase.h
test/: CMakeLists.txt
